# brvm-agent

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Makefile  README.md  pyproject.toml  railway.json  requirements.txt
prompts/: enrichment.md  invest_decision.md  synthesis.md  weekly_synthesis.md
scripts/: check_anthropic.py  check_brevo.py  check_sentry.py  check_wassoya.py  seed_weekly_test.py
src/: config.py  database.py  dates.py  events.py  main.py  models.py  observability.py  pipeline.py  scheduler.py
src/analysis/: _retry.py  enrichment.py  features.py  investment_advisor.py  market.py  schemas.py  synthesis.py  weekly_synthesis.py
src/api/: analyze.py  auth.py  backfill.py  briefs.py  deps.py  market.py  pagination.py  preview.py  recipients.py  runs.py  schedule.py  sources.py  stats.py  trades.py  users.py
src/auth/: email.py  rate_limit.py  tokens.py
src/backfill/: __init__.py  brvm_pdf.py  runner.py  service.py
src/collectors/: base.py  brvm_official.py  historical_import.py  pdf_extractor.py  registry.py  sika_communiques.py  sika_finance.py  sika_quotes.py
src/delivery/: email_brevo.py  repository.py  sample_brief.py  whatsapp.py  whatsapp_brevo.py
src/storage/: __init__.py  base.py  s3.py
tests/: conftest.py  conftest_db.py  test_analyze.py  test_backfill_resume.py  test_backfill_service.py  test_backtest.py  test_brvm_pdf.py  test_config.py  test_delivery.py  test_historical_import.py  test_recipients_validation.py  test_storage.py  test_trades.py
tests/analysis/: test_enrichment.py  (+2 more)
tools/: backtest_signals.py
(+5 files in other folders)
